---------------------------------------------------------------------------------------------------
Version: 4.1.17
Date: ????
  Changes:
    - Internal cleanup
---------------------------------------------------------------------------------------------------
Version: 4.1.16
Date: 2022.08.17
  Changes:
    - Adjustments for omnimatters new omnicium plate
---------------------------------------------------------------------------------------------------
Version: 4.1.15
Date: 2022.08.06
  Bugfixes:
    - Fixed that omnide-solution fluids had no flow-/basecolor
    - Fixed that omnide solution fluids had no barreling recipes
---------------------------------------------------------------------------------------------------
Version: 4.1.14
Date: 2022.05.01
  Changes:
    - Baketorio support (Thanks, Jemsterr!)
---------------------------------------------------------------------------------------------------
Version: 4.1.13
Date: 2022.01.04
  Changes:
    - Removed fuel values from crystals that had no usage as fuel
---------------------------------------------------------------------------------------------------
Version: 4.1.12
Date: 2021.10.27
  Bugfixes:
    - Fixed that the expensive recipe version of crystal powder was not changed
---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2021.08.14
  Changes:
    - Updated for omnilib 4.1.13
---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.07.21
  Bugfixes:
    - Updated for omnilib 4.1.13
---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.06.20
  Features:
    - Added pollution values for all buildings
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.06.02
  Bugfixes: