@@ -3,6 +3,9 @@ Version: 4.1.17
 Date: ????
   Changes:
     - Internal cleanup
+  Bugfixes:
+    - Fixed that recipe copes with crystalline poweder were unlockable even though the original
+      recipe was not unlockable
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.16
 Date: 2022.08.17
